--- a/settings.json
+++ b/settings.json
@@ -14,7 +14,7 @@
     },
     "version": "2"
   },
-  "theme": "One Dark",
+  "theme": "Catppuccin Mocha",
   "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
@@ -64,8 +64,7 @@
     "git_gutter": "tracked_files",
     // ，在代码行旁边显示最后一次修改该行的提交信息
     "inline_blame": {
-      "enabled": false,
-      "position": "right"
+      "enabled": true
     }
   },
   "languages": {
